testsuite/tests/ffi/should_fail/ccfail007.hs
module Ccfail007 where

foreign import ccall "wrapper" f :: (Int -> Int) -> Int
