testsuite/tests/ffi/should_fail/ccfail007.stderr
ccfail007.hs:3:1: error: [GHC-41843]
    • Unacceptable result type in foreign declaration:
        IO result type expected
    • When checking declaration:
        foreign import ccall safe "wrapper" f :: (Int -> Int) -> Int

